tests/snapshots/snapshots__detail_renovate_github.snap
---
source: tests/snapshots.rs
expression: html
---
<!doctype html>
<html lang="en" class="" data-palette="neutral">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <meta name="htmx-config" content='{"includeIndicatorStyles":false,"allowEval":false,"allowScriptTags":false}'>
  <title>Renovate – GitHub token · you-spin-me</title>
  <link rel="stylesheet" href="/assets/dist/app.css?v=[hash]">
  <link rel="icon" href="/assets/dist/favicon.svg?v=[hash]" type="image/svg+xml">
  <script src="/assets/vendor/htmx/htmx.min.js?v=[hash]" defer></script>
  <script src="/assets/js/app.js?v=[hash]" defer></script>
</head>
<body class="min-h-screen bg-background text-foreground antialiased" hx-headers='{"X-CSRF-Token": "demo-csrf-token"}'>
  
  <div class="bg-destructive text-white text-center text-xs py-1">Insecure dev auth: every visitor is an admin. Do not expose this instance.</div>
  
  <header class="sticky top-0 z-40 border-b bg-background/80 backdrop-blur">
    <div class="mx-auto flex h-14 max-w-6xl items-center gap-3 px-4">
      <a href="/" class="flex items-center gap-2 font-semibold [&>svg]:size-5">
        <svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="M2.586 17.414A2 2 0 0 0 2 18.828V21a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1h1a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1h.172a2 2 0 0 0 1.414-.586l.814-.814a6.5 6.5 0 1 0-4-4z" />
  <circle cx="16.5" cy="7.5" r=".5" fill="currentColor" />
</svg>
        <span>you-spin-me</span>
      </a>
      <div class="ms-auto flex items-center gap-1">
        <button type="button" class="btn hidden sm:inline-flex text-muted-foreground" data-variant="outline" data-size="sm" data-palette-open aria-label="Search keys" aria-keyshortcuts="Control+K Meta+K">
          <svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="m21 21-4.34-4.34" />
  <circle cx="11" cy="11" r="8" />
</svg>
          <span class="pe-4">Search keys…</span>
          <kbd class="kbd">⌘K</kbd>
        </button>
        <button type="button" class="btn sm:hidden" data-variant="ghost" data-size="icon" data-palette-open aria-label="Search keys">
          <svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="m21 21-4.34-4.34" />
  <circle cx="11" cy="11" r="8" />
</svg>
        </button>
        <button type="button" class="btn" data-variant="ghost" data-size="icon" data-theme-toggle aria-label="Toggle dark mode">
          <span class="dark:hidden"><svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="M20.985 12.486a9 9 0 1 1-9.473-9.472c.405-.022.617.46.402.803a6 6 0 0 0 8.268 8.268c.344-.215.825-.004.803.401" />
</svg></span>
          <span class="hidden dark:inline"><svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <circle cx="12" cy="12" r="4" />
  <path d="M12 2v2" />
  <path d="M12 20v2" />
  <path d="m4.93 4.93 1.41 1.41" />
  <path d="m17.66 17.66 1.41 1.41" />
  <path d="M2 12h2" />
  <path d="M20 12h2" />
  <path d="m6.34 17.66-1.41 1.41" />
  <path d="m19.07 4.93-1.41 1.41" />
</svg></span>
        </button>
        <button type="button" class="btn" data-variant="ghost" data-size="icon" data-palette-cycle aria-label="Change colour palette" title="Colour palette">
          <svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="M12 22a1 1 0 0 1 0-20 10 9 0 0 1 10 9 5 5 0 0 1-5 5h-2.25a1.75 1.75 0 0 0-1.4 2.8l.3.4a1.75 1.75 0 0 1-1.4 2.8z" />
  <circle cx="13.5" cy="6.5" r=".5" fill="currentColor" />
  <circle cx="17.5" cy="10.5" r=".5" fill="currentColor" />
  <circle cx="6.5" cy="12.5" r=".5" fill="currentColor" />
  <circle cx="8.5" cy="7.5" r=".5" fill="currentColor" />
</svg>
        </button>
        <span class="hidden md:inline-flex items-center gap-1 px-2 text-sm text-muted-foreground [&>svg]:size-4">
          <svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z" />
  <path d="m9 12 2 2 4-4" />
</svg>
          dev-admin
        </span>
        
      </div>
    </div>
  </header>
  <main class="mx-auto max-w-6xl px-4 py-6">
    
<div class="flex flex-col gap-6">
  <a href="/" class="inline-flex w-fit items-center gap-1 text-sm text-muted-foreground hover:text-foreground [&>svg]:size-4">
    <svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="m15 18-6-6 6-6" />
</svg> All keys
  </a>

  

  <div class="flex flex-wrap items-start justify-between gap-4">
    <div class="flex flex-col gap-1">
      <h1 class="text-2xl font-semibold tracking-tight">Renovate – GitHub token</h1>
      <div class="flex flex-wrap items-center gap-2 text-sm text-muted-foreground">
        <span class="badge state-badge" data-state="warning"><span class="state-dot"></span>Due soon</span>
        <span class="badge" data-variant="outline">github</span>
        <span>owned by david</span>
        <code class="text-xs">renovate-github</code>
      </div>
    </div>
    <div class="flex flex-wrap gap-2">
      
      
      <a class="btn" data-variant="outline" href="https://github.com/settings/personal-access-tokens" target="_blank" rel="noopener noreferrer">
        Renew <svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="M15 3h6v6" />
  <path d="M10 14 21 3" />
  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6" />
</svg>
      </a>
      
      
      
      
      <button type="button" class="btn" data-dialog-open="rotate-dialog">
        <svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="M21 12a9 9 0 1 1-9-9c2.52 0 4.93 1 6.74 2.74L21 8" />
  <path d="M21 3v5h-5" />
</svg> Rotate
      </button>
      
      <button type="button" class="btn" data-variant="secondary" data-dialog-open="record-dialog">
        <svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="M13.4 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-7.4" />
  <path d="M2 6h4" />
  <path d="M2 10h4" />
  <path d="M2 14h4" />
  <path d="M2 18h4" />
  <path d="M21.378 5.626a1 1 0 1 0-3.004-3.004l-5.01 5.012a2 2 0 0 0-.506.854l-.837 2.87a.5.5 0 0 0 .62.62l2.87-.837a2 2 0 0 0 .854-.506z" />
</svg> Record rotation
      </button>
      
    </div>
  </div>

  

  <div class="grid gap-4 md:grid-cols-2">
    
    <div class="card">
      <header>
        <h2>Schedule</h2>
        <p>The deadline is the earlier of the expiry and the rotation policy.</p>
      </header>
      <section>
        <dl class="kv">
          <dt>Due</dt>
          <dd>2026-10-06 (in 10d, expiry)</dd>
          <dt>Expires</dt>
          <dd>2026-10-06 12:00 UTC <span class="text-muted-foreground">· entered by hand</span></dd>
          <dt>Rotate by</dt>
          <dd>2026-10-06 12:00 UTC <span class="text-muted-foreground">· max age 90d</span></dd>
          <dt>Last rotated</dt>
          <dd>2026-07-08 12:00 UTC <span class="text-muted-foreground">by david</span></dd>
          <dt>Alerts</dt>
          <dd>warning 14d before, critical 5d before</dd>
          
        </dl>
        
      </section>
    </div>
    

    <div class="card">
      <header>
        <h2>Setup</h2>
        <p>How the key is configured at the provider.</p>
      </header>
      <section class="flex flex-col gap-3">
        
        <div class="flex flex-wrap gap-1.5">
          <span class="badge" data-variant="secondary">contents: read</span><span class="badge" data-variant="secondary">pull_requests: write</span><span class="badge" data-variant="secondary">workflows: write</span>
        </div>
        
        
      </section>
    </div>

    <div class="card">
      <header>
        <h2>Targets</h2>
        <p>Written automatically when a new key is submitted.</p>
      </header>
      <section>
        
        <ul class="flex flex-col gap-2 text-sm">
          
          <li class="flex flex-wrap items-center justify-between gap-2">
            <code class="break-all">openbao/secret/ci/renovate#token</code>
            <span class="flex items-center gap-2">
              <span class="badge state-badge" data-state="ok"><span class="state-dot"></span>ok</span>
              
              <span class="text-muted-foreground">80d ago</span>
            </span>
            
          </li>
          
        </ul>
        
      </section>
    </div>

    <div class="card">
      <header>
        <h2>Update by hand</h2>
        <p>Places the key must be changed manually after rotating.</p>
      </header>
      <section>
        
        <ul class="flex list-disc flex-col gap-1 ps-5 text-sm">
          <li>GitHub Actions secret RENOVATE_TOKEN in infra repo</li>
        </ul>
        
      </section>
    </div>
  </div>

  <div class="card">
    <header>
      <h2>History</h2>
      <p>The last 1 events.</p>
    </header>
    <section>
      
      <div class="table-container">
        <table class="table">
          <thead><tr><th>When</th><th>What</th><th>By</th><th>Expires</th></tr></thead>
          <tbody>
            
            <tr><td>2026-07-08 12:00 UTC</td><td>Rotated</td><td>david</td><td>2026-10-06</td></tr>
            
          </tbody>
        </table>
      </div>
      
    </section>
  </div>
</div>

  </main>
  


<dialog id="rotate-dialog" class="dialog" aria-labelledby="rotate-title">
  <form class="w-full sm:max-w-lg" hx-post="/keys/renovate-github/rotate" hx-target="#rotate-result" hx-swap="innerHTML" hx-disabled-elt="find button[type=submit]" autocomplete="off">
    <input type="hidden" name="_csrf" value="demo-csrf-token">
    <header>
      <h2 id="rotate-title">Rotate Renovate – GitHub token</h2>
      <p>The key is written to 1 target(s) and never stored or shown by this app.</p>
    </header>
    <section class="flex flex-col gap-4">
      <ol class="flex list-decimal flex-col gap-1 ps-5 text-sm">
        <li><a class="underline underline-offset-4" href="https://github.com/settings/personal-access-tokens" target="_blank" rel="noopener noreferrer">Create a new key at the provider</a> with: contents: read, pull_requests: write, workflows: write.</li>
        <li>Paste it below and submit.</li>
      </ol>
      <div class="field">
        <label for="new-key">New key</label>
        <input id="new-key" type="password" name="key" required autocomplete="off" spellcheck="false" data-1p-ignore data-lpignore="true">
      </div>
      <div class="field">
        <label for="rotate-expires">Expires on <span class="text-muted-foreground">(optional)</span></label>
        <input id="rotate-expires" type="date" name="expires_at" min="2026-09-26">
        <p>Detected from github when possible.</p>
      </div>
      
      <label class="flex items-center gap-2 text-sm">
        <input type="checkbox" class="input" name="skip_verification" value="1">
        Skip checking the key with github
      </label>
      
      <div id="rotate-result" aria-live="polite"></div>
    </section>
    <footer>
      <button type="button" class="btn" data-variant="outline" data-dialog-close>Close</button>
      <button type="submit" class="btn"><svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="M21 12a9 9 0 1 1-9-9c2.52 0 4.93 1 6.74 2.74L21 8" />
  <path d="M21 3v5h-5" />
</svg> Write to targets</button>
    </footer>
    <button type="button" data-dialog-close aria-label="Close"><svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="M18 6 6 18" />
  <path d="m6 6 12 12" />
</svg></button>
  </form>
</dialog>

<dialog id="record-dialog" class="dialog" aria-labelledby="record-title">
  <form method="post" action="/keys/renovate-github/record" class="w-full sm:max-w-md">
    <input type="hidden" name="_csrf" value="demo-csrf-token">
    <header>
      <h2 id="record-title">Record rotation</h2>
      <p>For keys rotated outside this app, or to restore dates after a cluster rebuild. No key is submitted.</p>
    </header>
    <section class="flex flex-col gap-4">
      <div class="field">
        <label for="rotated_at">Rotated on</label>
        <input id="rotated_at" type="date" name="rotated_at" value="2026-09-26" max="2026-09-26" required>
      </div>
      <div class="field">
        <label for="expires_at">Expires on <span class="text-muted-foreground">(optional)</span></label>
        <input id="expires_at" type="date" name="expires_at">
        <p>Leave empty if the key does not expire; the rotation policy still applies.</p>
      </div>
    </section>
    <footer>
      <button type="button" class="btn" data-variant="outline" data-dialog-close>Cancel</button>
      <button type="submit" class="btn">Record</button>
    </footer>
    <button type="button" data-dialog-close aria-label="Close"><svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="M18 6 6 18" />
  <path d="m6 6 12 12" />
</svg></button>
  </form>
</dialog>


  <dialog id="command-palette" class="command-dialog" aria-label="Search keys">
    <div class="command">
      <header>
        <svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="m21 21-4.34-4.34" />
  <circle cx="11" cy="11" r="8" />
</svg>
        <input type="search" name="q" placeholder="Search keys…" autocomplete="off" aria-label="Search keys"
               role="combobox" aria-autocomplete="list" aria-controls="command-results" aria-expanded="false"
               hx-get="/search" hx-trigger="input changed delay:150ms, search, palette-open" hx-target="#command-results">
      </header>
      <div id="command-results" role="listbox" aria-label="Keys" data-empty="No keys found."></div>
    </div>
  </dialog>
</body>
</html>
